--- a/offer/xss.html
+++ b/offer/xss.html
@@ -3,7 +3,7 @@
  * @Company: kaochong
  * @Date: 2020-12-21 22:10:43
  * @LastEditors: xiuquanxu
- * @LastEditTime: 2020-12-28 13:38:55
+ * @LastEditTime: 2020-12-28 13:40:11
 -->
 <html>
     <meta charset="utf-8"/>
@@ -19,7 +19,7 @@
         // xss是利用浏览器自动执行用户插入的脚本进行攻击的方式
         // 1、 主要api包括：innerHTML、outerHTML、document.write()
         // 2、当innerHTML时候如果script他不会执行，但是写img标签就会自动执行，这样就可以造成攻击，outerHTML和document.write同理。为了不造成攻击如果是纯文本我们通常使用setAttribute这个Api进行设置。
-        // 3、vue中为什么没有出现这个问题，首先vue有两种渲染，第一种渲染文本是{{ msg }}这种渲染文本实际触发的是textContext，第二种v-html这个时候调用的是innerHTML，这个时候就会触发自动执行脚本逻辑
+        // 3、关于vue，首先vue有两种渲染，第一种渲染文本是{{ msg }}这种渲染文本实际触发的是textContext，第二种v-html这个时候调用的是innerHTML，这个时候就会触发自动执行脚本逻辑
         // 所以我们在用v-html时候我们通常要转义，例如:<img src="x">转移成&lt;img&nbsp;src="x"&gt;，这样在调用v-html时候就不会执行代码而得到正确内容
             setTimeout(() => {
                 var ele = document.getElementById('status');
